@Refactor: use jdk8 instead of jdk17