@@ -4,18 +4,16 @@
 
 package io.modelcontextprotocol.server;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.function.BiConsumer;
-import java.util.function.BiFunction;
-
 import io.modelcontextprotocol.spec.McpSchema;
 import io.modelcontextprotocol.util.Assert;
 import io.modelcontextprotocol.util.Utils;
+import lombok.Value;
 import reactor.core.publisher.Mono;
 import reactor.core.scheduler.Schedulers;
+
+import java.util.*;
+import java.util.function.BiConsumer;
+import java.util.function.BiFunction;
 
 /**
  * MCP server features specification that a particular server can choose to support.
@@ -27,24 +25,35 @@ public class McpServerFeatures {
 
 	/**
 	 * Asynchronous server features specification.
-	 *
-	 * @param serverInfo The server implementation details
-	 * @param serverCapabilities The server capabilities
-	 * @param tools The list of tool specifications
-	 * @param resources The map of resource specifications
-	 * @param resourceTemplates The list of resource templates
-	 * @param prompts The map of prompt specifications
-	 * @param rootsChangeConsumers The list of consumers that will be notified when the
-	 * roots list changes
-	 * @param instructions The server instructions text
 	 */
-	record Async(McpSchema.Implementation serverInfo, McpSchema.ServerCapabilities serverCapabilities,
-			List<McpServerFeatures.AsyncToolSpecification> tools, Map<String, AsyncResourceSpecification> resources,
-			List<McpSchema.ResourceTemplate> resourceTemplates,
-			Map<String, McpServerFeatures.AsyncPromptSpecification> prompts,
-			Map<McpSchema.CompleteReference, McpServerFeatures.AsyncCompletionSpecification> completions,
-			List<BiFunction<McpAsyncServerExchange, List<McpSchema.Root>, Mono<Void>>> rootsChangeConsumers,
-			String instructions) {
+	@Value
+	static class Async {
+
+		/** The server implementation details */
+		McpSchema.Implementation serverInfo;
+
+		/** The server capabilities */
+		McpSchema.ServerCapabilities serverCapabilities;
+
+		/** The list of tool specifications */
+		List<McpServerFeatures.AsyncToolSpecification> tools;
+
+		/** The map of resource specifications */
+		Map<String, AsyncResourceSpecification> resources;
+
+		/** The list of resource templates */
+		List<McpSchema.ResourceTemplate> resourceTemplates;
+
+		/** The map of prompt specifications */
+		Map<String, McpServerFeatures.AsyncPromptSpecification> prompts;
+
+		Map<McpSchema.CompleteReference, McpServerFeatures.AsyncCompletionSpecification> completions;
+
+		/** The list of consumers that will be notified when the roots list changes */
+		List<BiFunction<McpAsyncServerExchange, List<McpSchema.Root>, Mono<Void>>> rootsChangeConsumers;
+
+		/** The server instructions text */
+		String instructions;
 
 		/**
 		 * Create an instance and validate the arguments.
@@ -81,12 +90,12 @@ public class McpServerFeatures {
 									? new McpSchema.ServerCapabilities.ResourceCapabilities(false, false) : null,
 							!Utils.isEmpty(tools) ? new McpSchema.ServerCapabilities.ToolCapabilities(false) : null);
 
-			this.tools = (tools != null) ? tools : List.of();
-			this.resources = (resources != null) ? resources : Map.of();
-			this.resourceTemplates = (resourceTemplates != null) ? resourceTemplates : List.of();
-			this.prompts = (prompts != null) ? prompts : Map.of();
-			this.completions = (completions != null) ? completions : Map.of();
-			this.rootsChangeConsumers = (rootsChangeConsumers != null) ? rootsChangeConsumers : List.of();
+			this.tools = (tools != null) ? tools : Collections.emptyList();
+			this.resources = (resources != null) ? resources : Collections.emptyMap();
+			this.resourceTemplates = (resourceTemplates != null) ? resourceTemplates : Collections.emptyList();
+			this.prompts = (prompts != null) ? prompts : Collections.emptyMap();
+			this.completions = (completions != null) ? completions : Collections.emptyMap();
+			this.rootsChangeConsumers = (rootsChangeConsumers != null) ? rootsChangeConsumers : Collections.emptyList();
 			this.instructions = instructions;
 		}
 
@@ -100,58 +109,69 @@ public class McpServerFeatures {
 		 */
 		static Async fromSync(Sync syncSpec) {
 			List<McpServerFeatures.AsyncToolSpecification> tools = new ArrayList<>();
-			for (var tool : syncSpec.tools()) {
+			for (SyncToolSpecification tool : syncSpec.getTools()) {
 				tools.add(AsyncToolSpecification.fromSync(tool));
 			}
 
 			Map<String, AsyncResourceSpecification> resources = new HashMap<>();
-			syncSpec.resources().forEach((key, resource) -> {
+			syncSpec.getResources().forEach((key, resource) -> {
 				resources.put(key, AsyncResourceSpecification.fromSync(resource));
 			});
 
 			Map<String, AsyncPromptSpecification> prompts = new HashMap<>();
-			syncSpec.prompts().forEach((key, prompt) -> {
+			syncSpec.getPrompts().forEach((key, prompt) -> {
 				prompts.put(key, AsyncPromptSpecification.fromSync(prompt));
 			});
 
 			Map<McpSchema.CompleteReference, McpServerFeatures.AsyncCompletionSpecification> completions = new HashMap<>();
-			syncSpec.completions().forEach((key, completion) -> {
+			syncSpec.getCompletions().forEach((key, completion) -> {
 				completions.put(key, AsyncCompletionSpecification.fromSync(completion));
 			});
 
 			List<BiFunction<McpAsyncServerExchange, List<McpSchema.Root>, Mono<Void>>> rootChangeConsumers = new ArrayList<>();
 
-			for (var rootChangeConsumer : syncSpec.rootsChangeConsumers()) {
+			for (BiConsumer<McpSyncServerExchange, List<McpSchema.Root>> rootChangeConsumer : syncSpec.getRootsChangeConsumers()) {
 				rootChangeConsumers.add((exchange, list) -> Mono
 					.<Void>fromRunnable(() -> rootChangeConsumer.accept(new McpSyncServerExchange(exchange), list))
 					.subscribeOn(Schedulers.boundedElastic()));
 			}
 
-			return new Async(syncSpec.serverInfo(), syncSpec.serverCapabilities(), tools, resources,
-					syncSpec.resourceTemplates(), prompts, completions, rootChangeConsumers, syncSpec.instructions());
+			return new Async(syncSpec.getServerInfo(), syncSpec.getServerCapabilities(), tools, resources,
+					syncSpec.getResourceTemplates(), prompts, completions, rootChangeConsumers, syncSpec.getInstructions());
 		}
 	}
 
 	/**
 	 * Synchronous server features specification.
-	 *
-	 * @param serverInfo The server implementation details
-	 * @param serverCapabilities The server capabilities
-	 * @param tools The list of tool specifications
-	 * @param resources The map of resource specifications
-	 * @param resourceTemplates The list of resource templates
-	 * @param prompts The map of prompt specifications
-	 * @param rootsChangeConsumers The list of consumers that will be notified when the
-	 * roots list changes
-	 * @param instructions The server instructions text
 	 */
-	record Sync(McpSchema.Implementation serverInfo, McpSchema.ServerCapabilities serverCapabilities,
-			List<McpServerFeatures.SyncToolSpecification> tools,
-			Map<String, McpServerFeatures.SyncResourceSpecification> resources,
-			List<McpSchema.ResourceTemplate> resourceTemplates,
-			Map<String, McpServerFeatures.SyncPromptSpecification> prompts,
-			Map<McpSchema.CompleteReference, McpServerFeatures.SyncCompletionSpecification> completions,
-			List<BiConsumer<McpSyncServerExchange, List<McpSchema.Root>>> rootsChangeConsumers, String instructions) {
+	@Value
+	static class Sync {
+
+		/** The server implementation details */
+		McpSchema.Implementation serverInfo;
+
+		/** The server capabilities */
+		McpSchema.ServerCapabilities serverCapabilities;
+
+		/** The list of tool specifications */
+		List<McpServerFeatures.SyncToolSpecification> tools;
+
+		/** The map of resource specifications */
+		Map<String, McpServerFeatures.SyncResourceSpecification> resources;
+
+		/** The list of resource templates */
+		List<McpSchema.ResourceTemplate> resourceTemplates;
+
+		/** The map of prompt specifications */
+		Map<String, McpServerFeatures.SyncPromptSpecification> prompts;
+
+		Map<McpSchema.CompleteReference, McpServerFeatures.SyncCompletionSpecification> completions;
+
+		/** The list of consumers that will be notified when the roots list changes */
+		List<BiConsumer<McpSyncServerExchange, List<McpSchema.Root>>> rootsChangeConsumers;
+
+		/** The server instructions text */
+		String instructions;
 
 		/**
 		 * Create an instance and validate the arguments.
@@ -229,24 +249,27 @@ public class McpServerFeatures {
 	 *     }
 	 * )
 	 * }</pre>
-	 *
-	 * @param tool The tool definition including name, description, and parameter schema
-	 * @param call The function that implements the tool's logic, receiving arguments and
-	 * returning results. The function's first argument is an
-	 * {@link McpAsyncServerExchange} upon which the server can interact with the
-	 * connected client. The second arguments is a map of tool arguments.
 	 */
-	public record AsyncToolSpecification(McpSchema.Tool tool,
-			BiFunction<McpAsyncServerExchange, Map<String, Object>, Mono<McpSchema.CallToolResult>> call) {
+	@Value
+	public static class AsyncToolSpecification {
+
+		/** The tool definition including name, description, and parameter schema */
+		McpSchema.Tool tool;
+
+		/** The function that implements the tool's logic, receiving arguments and
+		 * returning results. The function's first argument is an
+		 * {@link McpAsyncServerExchange} upon which the server can interact with the
+		 * connected client. The second arguments is a map of tool arguments. */
+		BiFunction<McpAsyncServerExchange, Map<String, Object>, Mono<McpSchema.CallToolResult>> call;
 
 		static AsyncToolSpecification fromSync(SyncToolSpecification tool) {
 			// FIXME: This is temporary, proper validation should be implemented
 			if (tool == null) {
 				return null;
 			}
-			return new AsyncToolSpecification(tool.tool(),
+			return new AsyncToolSpecification(tool.getTool(),
 					(exchange, map) -> Mono
-						.fromCallable(() -> tool.call().apply(new McpSyncServerExchange(exchange), map))
+						.fromCallable(() -> tool.getCall().apply(new McpSyncServerExchange(exchange), map))
 						.subscribeOn(Schedulers.boundedElastic()));
 		}
 	}
@@ -271,24 +294,27 @@ public class McpServerFeatures {
 	 *             .map(ReadResourceResult::new)
 	 * )
 	 * }</pre>
-	 *
-	 * @param resource The resource definition including name, description, and MIME type
-	 * @param readHandler The function that handles resource read requests. The function's
-	 * first argument is an {@link McpAsyncServerExchange} upon which the server can
-	 * interact with the connected client. The second arguments is a
-	 * {@link io.modelcontextprotocol.spec.McpSchema.ReadResourceRequest}.
 	 */
-	public record AsyncResourceSpecification(McpSchema.Resource resource,
-			BiFunction<McpAsyncServerExchange, McpSchema.ReadResourceRequest, Mono<McpSchema.ReadResourceResult>> readHandler) {
+	@Value
+	public static class AsyncResourceSpecification {
+
+		/** The resource definition including name, description, and MIME type */
+		McpSchema.Resource resource;
+
+		/** The function that handles resource read requests. The function's
+		 * first argument is an {@link McpAsyncServerExchange} upon which the server can
+		 * interact with the connected client. The second arguments is a
+		 * {@link io.modelcontextprotocol.spec.McpSchema.ReadResourceRequest}. */
+		BiFunction<McpAsyncServerExchange, McpSchema.ReadResourceRequest, Mono<McpSchema.ReadResourceResult>> readHandler;
 
 		static AsyncResourceSpecification fromSync(SyncResourceSpecification resource) {
 			// FIXME: This is temporary, proper validation should be implemented
 			if (resource == null) {
 				return null;
 			}
-			return new AsyncResourceSpecification(resource.resource(),
+			return new AsyncResourceSpecification(resource.getResource(),
 					(exchange, req) -> Mono
-						.fromCallable(() -> resource.readHandler().apply(new McpSyncServerExchange(exchange), req))
+						.fromCallable(() -> resource.getReadHandler().apply(new McpSyncServerExchange(exchange), req))
 						.subscribeOn(Schedulers.boundedElastic()));
 		}
 	}
@@ -316,25 +342,28 @@ public class McpServerFeatures {
 	 *     }
 	 * )
 	 * }</pre>
-	 *
-	 * @param prompt The prompt definition including name and description
-	 * @param promptHandler The function that processes prompt requests and returns
-	 * formatted templates. The function's first argument is an
-	 * {@link McpAsyncServerExchange} upon which the server can interact with the
-	 * connected client. The second arguments is a
-	 * {@link io.modelcontextprotocol.spec.McpSchema.GetPromptRequest}.
 	 */
-	public record AsyncPromptSpecification(McpSchema.Prompt prompt,
-			BiFunction<McpAsyncServerExchange, McpSchema.GetPromptRequest, Mono<McpSchema.GetPromptResult>> promptHandler) {
+	@Value
+	public static class AsyncPromptSpecification {
+
+		/** The prompt definition including name and description */
+		McpSchema.Prompt prompt;
+
+		/** The function that processes prompt requests and returns
+		 * formatted templates. The function's first argument is an
+		 * {@link McpAsyncServerExchange} upon which the server can interact with the
+		 * connected client. The second arguments is a
+		 * {@link io.modelcontextprotocol.spec.McpSchema.GetPromptRequest}. */
+		BiFunction<McpAsyncServerExchange, McpSchema.GetPromptRequest, Mono<McpSchema.GetPromptResult>> promptHandler;
 
 		static AsyncPromptSpecification fromSync(SyncPromptSpecification prompt) {
 			// FIXME: This is temporary, proper validation should be implemented
 			if (prompt == null) {
 				return null;
 			}
-			return new AsyncPromptSpecification(prompt.prompt(),
+			return new AsyncPromptSpecification(prompt.getPrompt(),
 					(exchange, req) -> Mono
-						.fromCallable(() -> prompt.promptHandler().apply(new McpSyncServerExchange(exchange), req))
+						.fromCallable(() -> prompt.getPromptHandler().apply(new McpSyncServerExchange(exchange), req))
 						.subscribeOn(Schedulers.boundedElastic()));
 		}
 	}
@@ -348,15 +377,18 @@ public class McpServerFeatures {
 	 * <li>Parameter-driven template expansion
 	 * <li>Dynamic interaction with connected clients
 	 * </ul>
-	 *
-	 * @param referenceKey The unique key representing the completion reference.
-	 * @param completionHandler The asynchronous function that processes completion
-	 * requests and returns results. The first argument is an
-	 * {@link McpAsyncServerExchange} used to interact with the client. The second
-	 * argument is a {@link io.modelcontextprotocol.spec.McpSchema.CompleteRequest}.
 	 */
-	public record AsyncCompletionSpecification(McpSchema.CompleteReference referenceKey,
-			BiFunction<McpAsyncServerExchange, McpSchema.CompleteRequest, Mono<McpSchema.CompleteResult>> completionHandler) {
+	@Value
+	public static class AsyncCompletionSpecification {
+
+		/** The unique key representing the completion reference. */
+		McpSchema.CompleteReference referenceKey;
+
+		/** The asynchronous function that processes completion
+		 * requests and returns results. The first argument is an
+		 * {@link McpAsyncServerExchange} used to interact with the client. The second
+		 * argument is a {@link io.modelcontextprotocol.spec.McpSchema.CompleteRequest}. */
+		BiFunction<McpAsyncServerExchange, McpSchema.CompleteRequest, Mono<McpSchema.CompleteResult>> completionHandler;
 
 		/**
 		 * Converts a synchronous {@link SyncCompletionSpecification} into an
@@ -370,9 +402,9 @@ public class McpServerFeatures {
 			if (completion == null) {
 				return null;
 			}
-			return new AsyncCompletionSpecification(completion.referenceKey(),
+			return new AsyncCompletionSpecification(completion.getReferenceKey(),
 					(exchange, request) -> Mono.fromCallable(
-							() -> completion.completionHandler().apply(new McpSyncServerExchange(exchange), request))
+							() -> completion.getCompletionHandler().apply(new McpSyncServerExchange(exchange), request))
 						.subscribeOn(Schedulers.boundedElastic()));
 		}
 	}
@@ -405,15 +437,18 @@ public class McpServerFeatures {
 	 *     }
 	 * )
 	 * }</pre>
-	 *
-	 * @param tool The tool definition including name, description, and parameter schema
-	 * @param call The function that implements the tool's logic, receiving arguments and
-	 * returning results. The function's first argument is an
-	 * {@link McpSyncServerExchange} upon which the server can interact with the connected
-	 * client. The second arguments is a map of arguments passed to the tool.
 	 */
-	public record SyncToolSpecification(McpSchema.Tool tool,
-			BiFunction<McpSyncServerExchange, Map<String, Object>, McpSchema.CallToolResult> call) {
+	@Value
+	public static class SyncToolSpecification {
+
+		/** The tool definition including name, description, and parameter schema */
+		McpSchema.Tool tool;
+
+		/** The function that implements the tool's logic, receiving arguments and
+		 * returning results. The function's first argument is an
+		 * {@link McpSyncServerExchange} upon which the server can interact with the connected
+		 * client. The second arguments is a map of arguments passed to the tool. */
+		BiFunction<McpSyncServerExchange, Map<String, Object>, McpSchema.CallToolResult> call;
 	}
 
 	/**
@@ -437,15 +472,18 @@ public class McpServerFeatures {
 	 *     }
 	 * )
 	 * }</pre>
-	 *
-	 * @param resource The resource definition including name, description, and MIME type
-	 * @param readHandler The function that handles resource read requests. The function's
-	 * first argument is an {@link McpSyncServerExchange} upon which the server can
-	 * interact with the connected client. The second arguments is a
-	 * {@link io.modelcontextprotocol.spec.McpSchema.ReadResourceRequest}.
 	 */
-	public record SyncResourceSpecification(McpSchema.Resource resource,
-			BiFunction<McpSyncServerExchange, McpSchema.ReadResourceRequest, McpSchema.ReadResourceResult> readHandler) {
+	@Value
+	public static class SyncResourceSpecification {
+
+		/** The resource definition including name, description, and MIME type */
+		McpSchema.Resource resource;
+
+		/** The function that handles resource read requests. The function's
+		 * first argument is an {@link McpSyncServerExchange} upon which the server can
+		 * interact with the connected client. The second arguments is a
+		 * {@link io.modelcontextprotocol.spec.McpSchema.ReadResourceRequest}. */
+		BiFunction<McpSyncServerExchange, McpSchema.ReadResourceRequest, McpSchema.ReadResourceResult> readHandler;
 	}
 
 	/**
@@ -471,29 +509,35 @@ public class McpServerFeatures {
 	 *     }
 	 * )
 	 * }</pre>
-	 *
-	 * @param prompt The prompt definition including name and description
-	 * @param promptHandler The function that processes prompt requests and returns
-	 * formatted templates. The function's first argument is an
-	 * {@link McpSyncServerExchange} upon which the server can interact with the connected
-	 * client. The second arguments is a
-	 * {@link io.modelcontextprotocol.spec.McpSchema.GetPromptRequest}.
 	 */
-	public record SyncPromptSpecification(McpSchema.Prompt prompt,
-			BiFunction<McpSyncServerExchange, McpSchema.GetPromptRequest, McpSchema.GetPromptResult> promptHandler) {
+	@Value
+	public static class SyncPromptSpecification {
+
+		/** The prompt definition including name and description */
+		McpSchema.Prompt prompt;
+
+		/** The function that processes prompt requests and returns
+		 * formatted templates. The function's first argument is an
+		 * {@link McpSyncServerExchange} upon which the server can interact with the connected
+		 * client. The second arguments is a
+		 * {@link io.modelcontextprotocol.spec.McpSchema.GetPromptRequest}. */
+		BiFunction<McpSyncServerExchange, McpSchema.GetPromptRequest, McpSchema.GetPromptResult> promptHandler;
 	}
 
 	/**
 	 * Specification of a completion handler function with synchronous execution support.
-	 *
-	 * @param referenceKey The unique key representing the completion reference.
-	 * @param completionHandler The synchronous function that processes completion
-	 * requests and returns results. The first argument is an
-	 * {@link McpSyncServerExchange} used to interact with the client. The second argument
-	 * is a {@link io.modelcontextprotocol.spec.McpSchema.CompleteRequest}.
 	 */
-	public record SyncCompletionSpecification(McpSchema.CompleteReference referenceKey,
-			BiFunction<McpSyncServerExchange, McpSchema.CompleteRequest, McpSchema.CompleteResult> completionHandler) {
+	@Value
+	public static class SyncCompletionSpecification {
+
+		/** The unique key representing the completion reference. */
+		McpSchema.CompleteReference referenceKey;
+
+		/** The synchronous function that processes completion
+		 * requests and returns results. The first argument is an
+		 * {@link McpSyncServerExchange} used to interact with the client. The second argument
+		 * is a {@link io.modelcontextprotocol.spec.McpSchema.CompleteRequest}. */
+		BiFunction<McpSyncServerExchange, McpSchema.CompleteRequest, McpSchema.CompleteResult> completionHandler;
 	}
 
 }
