@@ -4,29 +4,10 @@
 
 package io.modelcontextprotocol.client;
 
-import java.time.Duration;
-import java.util.Map;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Consumer;
-import java.util.function.Function;
-
 import io.modelcontextprotocol.spec.McpClientTransport;
 import io.modelcontextprotocol.spec.McpError;
 import io.modelcontextprotocol.spec.McpSchema;
-import io.modelcontextprotocol.spec.McpSchema.CallToolRequest;
-import io.modelcontextprotocol.spec.McpSchema.CallToolResult;
-import io.modelcontextprotocol.spec.McpSchema.ClientCapabilities;
-import io.modelcontextprotocol.spec.McpSchema.ListResourceTemplatesResult;
-import io.modelcontextprotocol.spec.McpSchema.ListResourcesResult;
-import io.modelcontextprotocol.spec.McpSchema.ListToolsResult;
-import io.modelcontextprotocol.spec.McpSchema.ReadResourceResult;
-import io.modelcontextprotocol.spec.McpSchema.Resource;
-import io.modelcontextprotocol.spec.McpSchema.Root;
-import io.modelcontextprotocol.spec.McpSchema.SubscribeRequest;
-import io.modelcontextprotocol.spec.McpSchema.TextContent;
-import io.modelcontextprotocol.spec.McpSchema.Tool;
-import io.modelcontextprotocol.spec.McpSchema.UnsubscribeRequest;
+import io.modelcontextprotocol.spec.McpSchema.*;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -35,9 +16,16 @@ import reactor.core.scheduler.Scheduler;
 import reactor.core.scheduler.Schedulers;
 import reactor.test.StepVerifier;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatCode;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import java.time.Duration;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Consumer;
+import java.util.function.Function;
+
+import static org.assertj.core.api.Assertions.*;
 
 /**
  * Unit tests for MCP Client Session functionality.
@@ -91,7 +79,7 @@ public abstract class AbstractMcpSyncClientTests {
 
 	void withClient(McpClientTransport transport, Function<McpClient.SyncSpec, McpClient.SyncSpec> customizer,
 			Consumer<McpSyncClient> c) {
-		var client = client(transport, customizer);
+		McpSyncClient client = client(transport, customizer);
 		try {
 			c.accept(client);
 		}
@@ -165,18 +153,21 @@ public abstract class AbstractMcpSyncClientTests {
 			ListToolsResult tools = mcpSyncClient.listTools(null);
 
 			assertThat(tools).isNotNull().satisfies(result -> {
-				assertThat(result.tools()).isNotNull().isNotEmpty();
+				assertThat(result.getTools()).isNotNull().isNotEmpty();
 
-				Tool firstTool = result.tools().get(0);
-				assertThat(firstTool.name()).isNotNull();
-				assertThat(firstTool.description()).isNotNull();
+				Tool firstTool = result.getTools().get(0);
+				assertThat(firstTool.getName()).isNotNull();
+				assertThat(firstTool.getDescription()).isNotNull();
 			});
 		});
 	}
 
 	@Test
 	void testCallToolsWithoutInitialization() {
-		verifyCallTimesOut(client -> client.callTool(new CallToolRequest("add", Map.of("a", 3, "b", 4))),
+		Map<String, Object> map = new HashMap<>();
+		map.put("a", 3);
+		map.put("b", 4);
+		verifyCallTimesOut(client -> client.callTool(new CallToolRequest("add", map)),
 				"calling tools");
 	}
 
@@ -184,17 +175,20 @@ public abstract class AbstractMcpSyncClientTests {
 	void testCallTools() {
 		withClient(createMcpTransport(), mcpSyncClient -> {
 			mcpSyncClient.initialize();
-			CallToolResult toolResult = mcpSyncClient.callTool(new CallToolRequest("add", Map.of("a", 3, "b", 4)));
+			Map<String, Object> map = new HashMap<>();
+			map.put("a", 3);
+			map.put("b", 4);
+			CallToolResult toolResult = mcpSyncClient.callTool(new CallToolRequest("add", map));
 
 			assertThat(toolResult).isNotNull().satisfies(result -> {
 
-				assertThat(result.content()).hasSize(1);
+				assertThat(result.getContent()).hasSize(1);
 
-				TextContent content = (TextContent) result.content().get(0);
+				TextContent content = (TextContent) result.getContent().get(0);
 
 				assertThat(content).isNotNull();
-				assertThat(content.text()).isNotNull();
-				assertThat(content.text()).contains("7");
+				assertThat(content.getText()).isNotNull();
+				assertThat(content.getText()).contains("7");
 			});
 		});
 	}
@@ -214,7 +208,7 @@ public abstract class AbstractMcpSyncClientTests {
 
 	@Test
 	void testCallToolWithoutInitialization() {
-		CallToolRequest callToolRequest = new CallToolRequest("echo", Map.of("message", TEST_MESSAGE));
+		CallToolRequest callToolRequest = new CallToolRequest("echo", Collections.singletonMap("message", TEST_MESSAGE));
 		verifyCallTimesOut(client -> client.callTool(callToolRequest), "calling tools");
 	}
 
@@ -222,13 +216,13 @@ public abstract class AbstractMcpSyncClientTests {
 	void testCallTool() {
 		withClient(createMcpTransport(), mcpSyncClient -> {
 			mcpSyncClient.initialize();
-			CallToolRequest callToolRequest = new CallToolRequest("echo", Map.of("message", TEST_MESSAGE));
+			CallToolRequest callToolRequest = new CallToolRequest("echo", Collections.singletonMap("message", TEST_MESSAGE));
 
 			CallToolResult callToolResult = mcpSyncClient.callTool(callToolRequest);
 
 			assertThat(callToolResult).isNotNull().satisfies(result -> {
-				assertThat(result.content()).isNotNull();
-				assertThat(result.isError()).isNull();
+				assertThat(result.getContent()).isNotNull();
+				assertThat(result.getIsError()).isNull();
 			});
 		});
 	}
@@ -236,7 +230,7 @@ public abstract class AbstractMcpSyncClientTests {
 	@Test
 	void testCallToolWithInvalidTool() {
 		withClient(createMcpTransport(), mcpSyncClient -> {
-			CallToolRequest invalidRequest = new CallToolRequest("nonexistent_tool", Map.of("message", TEST_MESSAGE));
+			CallToolRequest invalidRequest = new CallToolRequest("nonexistent_tool", Collections.singletonMap("message", TEST_MESSAGE));
 
 			assertThatThrownBy(() -> mcpSyncClient.callTool(invalidRequest)).isInstanceOf(Exception.class);
 		});
@@ -268,12 +262,12 @@ public abstract class AbstractMcpSyncClientTests {
 			ListResourcesResult resources = mcpSyncClient.listResources(null);
 
 			assertThat(resources).isNotNull().satisfies(result -> {
-				assertThat(result.resources()).isNotNull();
+				assertThat(result.getResources()).isNotNull();
 
-				if (!result.resources().isEmpty()) {
-					Resource firstResource = result.resources().get(0);
-					assertThat(firstResource.uri()).isNotNull();
-					assertThat(firstResource.name()).isNotNull();
+				if (!result.getResources().isEmpty()) {
+					Resource firstResource = result.getResources().get(0);
+					assertThat(firstResource.getUri()).isNotNull();
+					assertThat(firstResource.getName()).isNotNull();
 				}
 			});
 		});
@@ -319,7 +313,7 @@ public abstract class AbstractMcpSyncClientTests {
 			Root root = new Root("file:///test/path/to/remove", "root-to-remove");
 			assertThatCode(() -> {
 				mcpSyncClient.addRoot(root);
-				mcpSyncClient.removeRoot(root.uri());
+				mcpSyncClient.removeRoot(root.getUri());
 			}).doesNotThrowAnyException();
 		});
 	}
@@ -344,12 +338,12 @@ public abstract class AbstractMcpSyncClientTests {
 			mcpSyncClient.initialize();
 			ListResourcesResult resources = mcpSyncClient.listResources(null);
 
-			if (!resources.resources().isEmpty()) {
-				Resource firstResource = resources.resources().get(0);
+			if (!resources.getResources().isEmpty()) {
+				Resource firstResource = resources.getResources().get(0);
 				ReadResourceResult result = mcpSyncClient.readResource(firstResource);
 
 				assertThat(result).isNotNull();
-				assertThat(result.contents()).isNotNull();
+				assertThat(result.getContents()).isNotNull();
 			}
 		});
 	}
@@ -366,7 +360,7 @@ public abstract class AbstractMcpSyncClientTests {
 			ListResourceTemplatesResult result = mcpSyncClient.listResourceTemplates(null);
 
 			assertThat(result).isNotNull();
-			assertThat(result.resourceTemplates()).isNotNull();
+			assertThat(result.getResourceTemplates()).isNotNull();
 		});
 	}
 
@@ -375,15 +369,15 @@ public abstract class AbstractMcpSyncClientTests {
 		withClient(createMcpTransport(), mcpSyncClient -> {
 			ListResourcesResult resources = mcpSyncClient.listResources(null);
 
-			if (!resources.resources().isEmpty()) {
-				Resource firstResource = resources.resources().get(0);
+			if (!resources.getResources().isEmpty()) {
+				Resource firstResource = resources.getResources().get(0);
 
 				// Test subscribe
-				assertThatCode(() -> mcpSyncClient.subscribeResource(new SubscribeRequest(firstResource.uri())))
+				assertThatCode(() -> mcpSyncClient.subscribeResource(new SubscribeRequest(firstResource.getUri())))
 					.doesNotThrowAnyException();
 
 				// Test unsubscribe
-				assertThatCode(() -> mcpSyncClient.unsubscribeResource(new UnsubscribeRequest(firstResource.uri())))
+				assertThatCode(() -> mcpSyncClient.unsubscribeResource(new UnsubscribeRequest(firstResource.getUri())))
 					.doesNotThrowAnyException();
 			}
 		});
