@@ -5,18 +5,18 @@
 package io.modelcontextprotocol.util;
 
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 
 import java.net.URI;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.CsvSource;
 
 class UtilsTests {
 
@@ -31,15 +31,15 @@ class UtilsTests {
 	@Test
 	void testCollectionIsEmpty() {
 		assertTrue(Utils.isEmpty((Collection<?>) null));
-		assertTrue(Utils.isEmpty(List.of()));
-		assertFalse(Utils.isEmpty(List.of("test")));
+		assertTrue(Utils.isEmpty(Collections.emptyList()));
+		assertFalse(Utils.isEmpty(Collections.singletonList("test")));
 	}
 
 	@Test
 	void testMapIsEmpty() {
 		assertTrue(Utils.isEmpty((Map<?, ?>) null));
-		assertTrue(Utils.isEmpty(Map.of()));
-		assertFalse(Utils.isEmpty(Map.of("key", "value")));
+		assertTrue(Utils.isEmpty(Collections.emptyMap()));
+		assertFalse(Utils.isEmpty(Collections.singletonMap("key", "value")));
 	}
 
 	@ParameterizedTest
